# studentsTest

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: android.yml  backend.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/studentstest/essay/: MainActivity.kt
android/app/src/main/res/values/: strings.xml
backend/: __init__.py
backend/app/: main.py  schemas.py
backend/app/api/v1/: essay_corrections.py  essay_templates.py
backend/app/core/: __init__.py  config.py
backend/app/services/: __init__.py  correction_pipeline.py  grader.py  ocr.py  provider_factory.py  template_store.py
backend/tests/: conftest.py  test_correction_pipeline.py  test_essay_corrections_api.py  test_essay_templates_api.py  test_imgocr_provider.py  test_openai_compatible_grader.py  test_xfyun_ocr_provider.py
samples/: README.md
