[project]
name = "students-test-essay-backend"
version = "0.1.0"
description = "Backend service for Chinese elementary essay correction from uploaded images."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<0.116.0",
    "httpx>=0.27.0,<0.28.0",
    "pydantic>=2.8.0,<3.0.0",
    "pydantic-settings>=2.4.0,<3.0.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30.0,<0.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<9.0.0",
]
ocr = [
    "imgocr>=0.0.6",
    "onnxruntime>=1.17.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]
addopts = "-q"
